# jarvisx

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
apps/admin/: Dockerfile  nginx.conf  package-lock.json  package.json
apps/admin/public/: index.html
apps/admin/src/: App.css  App.jsx  index.css  index.js  setupProxy.js
apps/admin/src/constants/: index.js  permissions.js
apps/chat/: Dockerfile  nginx.conf  package-lock.json  package.json
apps/chat/public/: index.html
apps/chat/src/: App.css  App.jsx  index.css  index.js  setupProxy.js
docs/: index.html
infra/docker/: base.Dockerfile  docker-compose.dev.yml  docker-compose.yml
infra/docker/apps/: admin-ui.Dockerfile  admin.Dockerfile  chat.Dockerfile  voice-chat.Dockerfile
infra/docker/services/: admin-api.Dockerfile  audit.Dockerfile  browser.Dockerfile  developer.Dockerfile  governance.Dockerfile  knowledge.Dockerfile  orchestrator.Dockerfile  pii_guardian.Dockerfile  policy.Dockerfile  researcher.Dockerfile  voice-gateway.Dockerfile
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 001_schema.py  002_seed_data.py  003_add_sso_and_encryption.py  004_add_sso_default_team.py  005_add_platform_settings.py  006_add_platform_features.py
scripts/: generate_sso_key.py  start_all.py
services/agents/browser/: Dockerfile
services/agents/developer/: Dockerfile
services/agents/knowledge/: Dockerfile
services/agents/orchestrator/: Dockerfile
services/agents/researcher/: Dockerfile
services/api/admin/: Dockerfile
services/gateways/voice/: Dockerfile
(+307 files in other folders)
